# EEG-from-scratch

./: README.md  requirements.txt  run_acquisition.py  run_acquistion_with_callback.py
acquisition/: arduino_acq.py  arduino_acquisition.py  arduino_acquisition_script.py
acquisition/arduinoAcquisition/: arduinoAcquisition.ino
analysis/: neurosky.ipynb
arduino_eeg/: README.md  acquisition.py  dsp.py  pyproject.toml  vis.py
arduino_eeg/arduinoAcquisition/: arduinoAcquisition.ino
arduino_eeg/arduino_eeg/: acquisition.py  dsp.py
experiments/: auditory_stimulus.py  auditory_stimulus_acquisition.py  neurosky.ipynb  run_acquisition.py  run_acquistion_queue_callback.py
